fix: add checking of alignment based on orientation

--- a/src/components/BigNumber/BigNumber.css
+++ b/src/components/BigNumber/BigNumber.css
@@ -17,5 +17,6 @@
 }
 
 .big-number-label {
-    margin: 0
+    margin: 0;
+    align-self: center;
 }
